--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />-->
   </head>
   <body>
-    <header class="pole-header">
+    <!-- <header class="pole-header">
       <div class="container-header container">
         <nav class="nav">
           <a href="./index.html" class="logo-header"
@@ -59,16 +59,16 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="hero">
+      <!--<section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="btn-primary" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section>
+      </section>-->
       <section class="strong-page">
         <!--Цей заголовок потім скриємо-->
         <h2 class="visually-hidden">Наші сильні сторони</h2>
@@ -81,7 +81,7 @@
                 </svg>
               </div>
               <h3 class="strong-list__title">Увага до деталей</h3>
-              <p class="strong-text">
+              <p class="strong-list__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
@@ -94,7 +94,7 @@
                 </svg>
               </div>
               <h3 class="strong-list__title">Пунктуальність</h3>
-              <p class="strong-text">
+              <p class="strong-list__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
@@ -107,7 +107,7 @@
                 </svg>
               </div>
               <h3 class="strong-list__title">Планування</h3>
-              <p class="strong-text">
+              <p class="strong-list__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
@@ -119,7 +119,7 @@
                 </svg>
               </div>
               <h3 class="strong-list__title">Сучасні технології</h3>
-              <p class="strong-text">
+              <p class="strong-list__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -128,7 +128,7 @@
         </div>
       </section>
 
-      <section class="work-page">
+      <!--<section class="work-page">
         <div class="container">
           <h2 class="title">Чим ми займаємося</h2>
           <ul class="work-list">
@@ -461,7 +461,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
 
       <section class="clients-page">
         <div class="container">
@@ -505,8 +505,8 @@
           </ul>
         </div>
       </section>
-    </main>
-    <footer class="basement">
+    </main> 
+    <!-- <footer class="basement">
       <div class="footer-container container">
         <div class="adress-footer">
           <a href="./index.html" class="logo-footer"
@@ -565,7 +565,7 @@
             </li>
           </ul>
         </div>
-        <!--Form footer-->
+        Form footer
         <div class="form-footer">
           <h2 class="form-footer__text">Підпишіться на розсилку</h2>
           <form>
@@ -586,7 +586,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!--Modal Window-->
     <div class="backdrop is-hidden" data-modal>
