created folder of teammates

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
       </section>
 
-      <!--<section class="work-page">
+      <section class="work-page">
         <div class="container">
           <h2 class="title">Чим ми займаємося</h2>
           <ul class="work-list">
@@ -179,7 +179,12 @@
           <ul class="team-list">
             <li class="card-worker">
               <img
-                src="./images/teammate_1.jpg"
+                srcset="
+                  ./images/team/teammate_1_l_x1.jpg 1x,
+                  ./images/team/teammate_1_l_x1.jpg 2x,
+                  ./images/team/teammate_1_l_x1.jpg 3x
+                "
+                src="./images/team/teammate_1_l_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
                 width="270"
@@ -250,7 +255,7 @@
 
             <li class="card-worker">
               <img
-                src="./images/teammate_2.jpg"
+                src="./images/team/teammate_2_l_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
                 width="270"
@@ -320,7 +325,7 @@
             </li>
             <li class="card-worker">
               <img
-                src="./images/teammate_3.jpg"
+                src="./images/team/teammate_3_l_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
                 width="270"
@@ -391,7 +396,7 @@
 
             <li class="card-worker">
               <img
-                src="./images/teammate_4.jpg"
+                src="./images/team/teammate_4_l_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
                 width="270"
@@ -461,7 +466,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
 
       <section class="clients-page">
         <div class="container">
@@ -470,42 +475,48 @@
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-first"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-client-first"></use></svg
+              ></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-second"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-client-second"></use></svg
+              ></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-third"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-client-third"></use></svg
+              ></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-forth"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-client-forth"></use></svg
+              ></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-fifth"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-client-fifth"></use></svg
+              ></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-sixth"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-client-sixth"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
       </section>
-    </main> 
+    </main>
     <!-- <footer class="basement">
       <div class="footer-container container">
         <div class="adress-footer">
