started doing team-section

--- a/index.html
+++ b/index.html
@@ -180,11 +180,10 @@
             <li class="card-worker">
               <img
                 srcset="
-                  ./images/team/teammate_1_l_x1.jpg 1x,
-                  ./images/team/teammate_1_l_x1.jpg 2x,
-                  ./images/team/teammate_1_l_x1.jpg 3x
+                  ./images/team/teammate_1_s_x1.jpg 450vw,
+                  ./images/team/teammate_1_s_x2.jpg 900vw,
                 "
-                src="./images/team/teammate_1_l_x1.jpg"
+                src="./images/team/teammate_1_s_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
                 width="270"
@@ -255,6 +254,10 @@
 
             <li class="card-worker">
               <img
+              srcset="
+                  ./images/team/teammate_2_l_x1.jpg 1x,
+                  ./images/team/teammate_2_l_x2.jpg 2x,
+                "
                 src="./images/team/teammate_2_l_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
@@ -325,6 +328,10 @@
             </li>
             <li class="card-worker">
               <img
+              srcset="
+                  ./images/team/teammate_3_l_x1.jpg 1x,
+                  ./images/team/teammate_3_l_x2.jpg 2x,
+                "
                 src="./images/team/teammate_3_l_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
@@ -396,6 +403,10 @@
 
             <li class="card-worker">
               <img
+              srcset="
+                  ./images/team/teammate_4_l_x1.jpg 1x,
+                  ./images/team/teammate_4_l_x2.jpg 2x,
+                "
                 src="./images/team/teammate_4_l_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
