made main part in index.html file adoptive

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       </div>
     </header> -->
     <main>
-      <!--<section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="btn-primary" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section>-->
+      </section>
       <section class="strong-page">
         <!--Цей заголовок потім скриємо-->
         <h2 class="visually-hidden">Наші сильні сторони</h2>
@@ -180,14 +180,17 @@
             <li class="card-worker">
               <img
                 srcset="
-                  ./images/team/teammate_1_s_x1.jpg 450vw,
-                  ./images/team/teammate_1_s_x2.jpg 900vw,
+                  ./images/team/teammate_1_s_x1.jpg 450w,
+                  ./images/team/teammate_1_s_x2.jpg 900w,
+                  ./images/team/teammate_1_m_x1.jpg 354w,
+                  ./images/team/teammate_1_m_x2.jpg 708w,
+                  ./images/team/teammate_1_l_x1.jpg 270w,
+                  ./images/team/teammate_1_l_x2.jpg 540w
                 "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
                 src="./images/team/teammate_1_s_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
-                width="270"
-                height="260"
               />
               <div class="container-card-team">
                 <h3 class="name-list">Ігор Дем'яненко</h3>
@@ -254,15 +257,18 @@
 
             <li class="card-worker">
               <img
-              srcset="
-                  ./images/team/teammate_2_l_x1.jpg 1x,
-                  ./images/team/teammate_2_l_x2.jpg 2x,
+                srcset="
+                  ./images/team/teammate_2_s_x1.jpg 450w,
+                  ./images/team/teammate_2_s_x2.jpg 900w,
+                  ./images/team/teammate_2_m_x1.jpg 354w,
+                  ./images/team/teammate_2_m_x2.jpg 708w,
+                  ./images/team/teammate_2_l_x1.jpg 270w,
+                  ./images/team/teammate_2_l_x2.jpg 540w
                 "
-                src="./images/team/teammate_2_l_x1.jpg"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/team/teammate_2_s_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
-                width="270"
-                height="260"
               />
               <div class="container-card-team">
                 <h3 class="name-list">Ольга Рєпіна</h3>
@@ -328,15 +334,18 @@
             </li>
             <li class="card-worker">
               <img
-              srcset="
-                  ./images/team/teammate_3_l_x1.jpg 1x,
-                  ./images/team/teammate_3_l_x2.jpg 2x,
+                srcset="
+                  ./images/team/teammate_3_s_x1.jpg 450w,
+                  ./images/team/teammate_3_s_x2.jpg 900w,
+                  ./images/team/teammate_3_m_x1.jpg 354w,
+                  ./images/team/teammate_3_m_x2.jpg 708w,
+                  ./images/team/teammate_3_l_x1.jpg 270w,
+                  ./images/team/teammate_3_l_x2.jpg 540w
                 "
-                src="./images/team/teammate_3_l_x1.jpg"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/team/teammate_3_s_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
-                width="270"
-                height="260"
               />
               <div class="container-card-team">
                 <h3 class="name-list">Микола Тарасов</h3>
@@ -403,15 +412,18 @@
 
             <li class="card-worker">
               <img
-              srcset="
-                  ./images/team/teammate_4_l_x1.jpg 1x,
-                  ./images/team/teammate_4_l_x2.jpg 2x,
+                srcset="
+                  ./images/team/teammate_4_s_x1.jpg 450w,
+                  ./images/team/teammate_4_s_x2.jpg 900w,
+                  ./images/team/teammate_4_m_x1.jpg 354w,
+                  ./images/team/teammate_4_m_x2.jpg 708w,
+                  ./images/team/teammate_4_l_x1.jpg 270w,
+                  ./images/team/teammate_4_l_x2.jpg 540w
                 "
-                src="./images/team/teammate_4_l_x1.jpg"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px"
+                src="./images/team/teammate_4_s_x1.jpg"
                 alt="Робітник"
                 class="team-photo"
-                width="270"
-                height="260"
               />
               <div class="container-card-team">
                 <h3 class="name-list">Михайло Єрмаков</h3>
