--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />-->
   </head>
   <body>
-    <!-- <header class="pole-header">
+    <header class="pole-header">
       <div class="container-header container">
         <nav class="nav">
           <a href="./index.html" class="logo-header"
@@ -29,7 +29,7 @@
           >
           <ul class="nav__list">
             <li class="header-item">
-              <a href="" class="nav-item streaming-page">Студія</a>
+              <a href="./index.html" class="nav-item streaming-page">Студія</a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="nav-item">Портфоліо</a>
@@ -58,8 +58,31 @@
             >
           </li>
         </ul>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+        <svg class="mobile-menu-open" width="40" height="40">
+          <use href="./images/sprite.svg#icon-menu_burger_open"></use>
+        </svg>
+          <!-- <svg
+            width="24"
+            height="24"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              clip-rule="evenodd"
+            ></path>
+          </svg> -->
+        </button>
       </div>
-    </header> -->
+    </header>
+
     <main>
       <section class="hero">
         <div class="container">
@@ -498,43 +521,39 @@
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-first"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-client-first"></use>
+                </svg></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-second"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-client-second"></use></svg>
+              </a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-third"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-client-third"></use></svg></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-forth"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-client-forth"></use></svg></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-fifth"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-client-fifth"></use></svg></a>
             </li>
 
             <li>
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-client-sixth"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-client-sixth"></use></svg></a>
             </li>
           </ul>
         </div>
@@ -701,9 +720,77 @@
         </form>
       </div>
     </div>
+<!-- Mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle menu-toggle-close js-close-menu">
+        <svg class="mobile-menu-close" width="40" height="40">
+          <use href="./images/sprite.svg#icon-menu_burger_close"></use>
+        </svg>
+        <!-- <svg
+          
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg> -->
+      </button>
+
+      <ul class="mobile-menu">
+        <li class="mobile-menu-item">
+          <a href="/index.html" class="mobile-menu-link link streaming-page">Студія</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="./portfolio.html" class="mobile-menu-link link">Портфоліо</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="" class="mobile-menu-link link">Контакти</a>
+        </li>
+        
+      </ul>
+
+      <ul class="mobile-contacts">
+        <li class="mobile-contacts-item list">
+          <a href="tel:+380961111111" class="mobile-contacts-link phone-link">+38 096 111 11 11</a>
+        </li>
+        <li class="mobile-contacts-item list">
+          <a href="mailto:info@devstudio.com" class="mobile-contacts-link mail-link">info@devstudio.com</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-socials">
+        <li class="mobile-sicials-item list">
+          <a href="" class="mobile-socials-link">Instagram</a>
+        </li>
+        <li class="mobile-sicials-item list">
+          <a href="" class="mobile-socials-link">Twitter</a>
+        </li>
+        <li class="mobile-sicials-item list">
+          <a href="" class="mobile-socials-link">Facebook</a>
+        </li>
+        <li class="mobile-sicials-item list">
+          <a href="" class="mobile-socials-link">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
 
     <!--Script for Modal Window-->
 
     <script src="./js/modal.js"></script>
+
+    <!-- Script for mobile-menu -->
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
